--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,15 @@ cmake_minimum_required(VERSION 2.8.7)
 # faiss project
 project(faiss C CXX)
 
-option(BUILD_TUTORIAL "Build tutorials" ON)
-option(BUILD_TEST "Build tests" ON)
-option(BUILD_WITH_GPU "Build faiss with gpu (cuda) support" ON)
+option(BUILD_TUTORIAL "Build tutorials" OFF)
+option(BUILD_TEST "Build tests" OFF)
+option(BUILD_WITH_GPU "Build faiss with gpu (cuda) support" OFF)
 option(WITH_MKL "Build with MKL if ON (OpenBLAS if OFF)" OFF)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
 
 # OpenMP
-find_package(OpenMP REQUIRED)
+find_package(OPENMP REQUIRED)
 
 # BLAS (MKL os OpenBLAS)
 if(WITH_MKL)
@@ -41,20 +41,20 @@ add_library(${faiss_lib} STATIC ${faiss_cpu_headers} ${faiss_cpu_cpp})
 target_link_libraries(${faiss_lib} ${OpenMP_CXX_FLAGS} ${BLAS_LIB})
 
 # build gpu lib
-if(BUILD_WITH_GPU)
-    include(cmake/Cuda.cmake)
-    add_subdirectory(gpu)
-endif(BUILD_WITH_GPU)
+#if(BUILD_WITH_GPU)
+    #include(cmake/Cuda.cmake)
+    #add_subdirectory(gpu)
+#endif(BUILD_WITH_GPU)
 
 # build tutorial examples
-if(BUILD_TUTORIAL)
-    add_subdirectory(tutorial)
-endif(BUILD_TUTORIAL)
+#if(BUILD_TUTORIAL)
+    #add_subdirectory(tutorial)
+#endif(BUILD_TUTORIAL)
 
 # build tests
-if(BUILD_TEST)
-    add_subdirectory(tests)
-endif(BUILD_TEST)
+#if(BUILD_TEST)
+    #add_subdirectory(tests)
+#endif(BUILD_TEST)
 # Install libraries
 install(TARGETS ${faiss_lib}
         ARCHIVE DESTINATION lib
