--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,54 @@ cmake_minimum_required(VERSION 2.8.7)
 # faiss project
 project(faiss C CXX)
 
-option(BUILD_TUTORIAL "Build tutorials" OFF)
+option(BUILD_TUTORIAL "Build tutorials" ON)
 option(BUILD_TEST "Build tests" OFF)
 option(BUILD_WITH_GPU "Build faiss with gpu (cuda) support" OFF)
 option(WITH_MKL "Build with MKL if ON (OpenBLAS if OFF)" OFF)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
 
+# Mac for gcc & g++
+set(CMAKE_C_COMPILER "/usr/local/Cellar/llvm/7.0.1/bin/clang")
+set(CMAKE_CXX_COMPILER "/usr/local/Cellar/llvm/7.0.1/bin/clang++")
+# Mac for OpenMP
+set(OPENMP_LIBRARIES "/usr/local/Cellar/llvm/7.0.1/lib")
+set(OPENMP_INCLUDES "/usr/local/Cellar/llvm/7.0.1/include")
 # OpenMP
-find_package(OPENMP REQUIRED)
+option(USE_OpenMP "Use OpenMP to enamble <omp.h>" ON)
+# Find OpenMP
+if(APPLE AND USE_OpenMP)
+    if(CMAKE_C_COMPILER_ID MATCHES "Clang")
+        set(OpenMP_C "${CMAKE_C_COMPILER}")
+        set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+        set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
+        set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+        set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+        set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
+    endif()
+    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
+        set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+        set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
+        set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+        set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+        set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+    endif()
+endif()
+
+if(USE_OpenMP)
+    find_package(OpenMP REQUIRED)
+endif(USE_OpenMP)
+
+if (OPENMP_FOUND)
+    include_directories("${OPENMP_INCLUDES}")
+    message(STATUS "Found MAC_OpenMP include: ${OPENMP_INCLUDES}")
+    link_directories("${OPENMP_LIBRARIES}")
+    message(STATUS "Found MAC_OpenMP libraries: ${OPENMP_LIBRARIES}")
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif(OPENMP_FOUND)
 
 # BLAS (MKL os OpenBLAS)
 if(WITH_MKL)
@@ -47,14 +86,15 @@ target_link_libraries(${faiss_lib} ${OpenMP_CXX_FLAGS} ${BLAS_LIB})
 #endif(BUILD_WITH_GPU)
 
 # build tutorial examples
-#if(BUILD_TUTORIAL)
-    #add_subdirectory(tutorial)
-#endif(BUILD_TUTORIAL)
+if(BUILD_TUTORIAL)
+    add_subdirectory(tutorial)
+endif(BUILD_TUTORIAL)
 
 # build tests
 #if(BUILD_TEST)
     #add_subdirectory(tests)
 #endif(BUILD_TEST)
+
 # Install libraries
 install(TARGETS ${faiss_lib}
         ARCHIVE DESTINATION lib
